--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -70,5 +70,5 @@ jobs:
       - name: Send valid IPs to server
         run: |
           data=`echo `cat valid_ips_with_ssl.txt`|tr -s ' ' ','`
-          curl -X PUT "https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{CF_NAMESPACE_ID}}/values/proxys" \
-            -H "Authorization: Bearer ${{CF_API_TOKEN}}" -H "Content-Type: application/json" -d "$data"
+          curl -X PUT "https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_NAMESPACE_ID}}/values/proxys" \
+            -H "Authorization: Bearer ${{secrets.CF_API_TOKEN}}" -H "Content-Type: application/json" -d "$data"
