--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -40,6 +40,8 @@ jobs:
           curl -o ips.zip https://zip.baipiao.eu.org
           unzip ips.zip -d ips
           cat ips/*.txt | sort | uniq > ips.txt
+          wc -l ips.txt
+          sleep 10
   
       - name: Ping IPs and filter
         run: |
@@ -49,11 +51,11 @@ jobs:
             measure_url=`curl -A "$UA" -X POST "https://api.globalping.io/v1/measurements" -H "content-type: application/json" \
               -d '{"type":"ping","target":"'$ip'","locations":[{"country":"HK","limit":2}]}' -i \
               |grep location|awk '{print $2}'`
-            sleep 5
+            sleep 10
             while true; do
-              r=`curl -A "$UA" -s $measure_url`
+              r=`curl -A "$UA" "$measure_url"`
               case "$r" in
-                *in-progress*)  sleep 5; continue;;
+                *in-progress*)  sleep 10; continue;;
                 *loss\":0*)     echo "$ip" >> valid_ips.txt; break;;
                 *)              break;;
               esac
