--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -41,21 +41,21 @@ jobs:
           unzip ips.zip -d ips
           cat ips/*.txt | sort | uniq > ips.txt
           wc -l ips.txt
-          sleep 10
+          curl --version
   
       - name: Ping IPs and filter
         run: |
           UA="Mozilla/5.0 Chrome/107.0.0.0 Safari/537.36"
           touch valid_ips.txt
           while IFS= read -r ip; do
-            measure_url=`curl -A "$UA" -X POST "https://api.globalping.io/v1/measurements" -H "content-type: application/json" \
+            measure_url=`curl -X POST "https://api.globalping.io/v1/measurements" -H "content-type: application/json" \
               -d '{"type":"ping","target":"'$ip'","locations":[{"country":"HK","limit":2}]}' -i \
               |grep location|awk '{print $2}'`
-            sleep 10
+            sleep 1
             while true; do
-              r=`curl -A "$UA" "$measure_url"`
+              r=`curl "$measure_url"`
               case "$r" in
-                *in-progress*)  sleep 10; continue;;
+                *in-progress*)  sleep 1; continue;;
                 *loss\":0*)     echo "$ip" >> valid_ips.txt; break;;
                 *)              break;;
               esac
