--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -5,7 +5,7 @@ name: IP Workflow
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: "30 17 * * *"
+    - cron: "32 19 * * *"
   # Triggers the workflow on push or pull request events but only for the "main" branch
   #push:
   #  branches: [ "main" ]
@@ -72,7 +72,8 @@ jobs:
   
       - name: Backup original data, append into valid_ips.txt
         run: |
-          orig_data=`curl -H "{{env.CF_AUTH}}" "${{env.CF_KV_API}}/${{env.PROXYS}}"`
+          orig_data=`curl -H "${{env.CF_AUTH}}" "${{env.CF_KV_API}}/${{env.PROXYS}}"`
+          [[ "$orig_data" == *error* ]] && echo $orig_data && return 1
           curl -X PUT -H "${{env.CF_AUTH}}" -d "$orig_data" "${{env.CF_KV_API}}/${{env.PROXYS_BAK}}"
           echo $orig_data |tr -d '["]'|sed -r 's/,| /\n/' >> valid_ips.txt
           wc -l valid_ips.txt
@@ -81,7 +82,8 @@ jobs:
         run: |          
           touch valid_ips_with_ssl.txt
           while IFS= read -r ip || [ $ip ]; do
-            ret=`echo|openssl s_client -connect $ip:443 -brief 2>&1`
+            ret=`echo|openssl s_client -connect $ip:443 -brief 2>&1|tr -s '\n\r' ' '`
+            echo $ip
             case "$ret" in
                 *Verification:\ OK*) echo "$ip" >> valid_ips_with_ssl.txt ;;
                 *458*)               echo "$ip" >> valid_ips_with_ssl.txt ;; # unrecognized name
