--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           curl -o ips.zip https://zip.baipiao.eu.org
           unzip ips.zip -d ips
-          cat ips/31898-0-20*.txt | sort | uniq > valid_ips.txt
+          cat ips/31898-0-*.txt | sort | uniq > valid_ips.txt
           wc -l valid_ips.txt
   
       - name: SSL/TLS Handshake Test
@@ -54,6 +54,7 @@ jobs:
           touch valid_ips_with_ssl.txt
           while IFS= read -r ip || [ $ip ]; do
             ret=`echo|openssl s_client -connect $ip:443 -brief 2>&1`
+            echo "ret=$ret ip=$ip"
             case "$ret" in
                 *Verification:\ OK*) echo "$ip" >> valid_ips_with_ssl.txt ;;
                 *458*)               echo "$ip" >> valid_ips_with_ssl.txt ;; # unrecognized name
