--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -53,7 +53,7 @@ jobs:
         run: |          
           touch valid_ips_with_ssl.txt
           while IFS= read -r ip || [ $ip ]; do
-            ret=`echo|openssl s_client -connect $ip:443 -brief 2>&1`
+            ret=`echo|openssl s_client -connect $ip:443 -noservername -brief 2>&1`
             echo "ret=$ret ip=$ip"
             case "$ret" in
                 *Verification:\ OK*) echo "$ip" >> valid_ips_with_ssl.txt ;;
