--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -5,10 +5,10 @@ name: IP Workflow
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: "0 20 * * *"
+    - cron: "0 21 * * *"
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
+  #push:
+  #  branches: [ "main" ]
   #pull_request:
   #  branches: [ "main" ]
 
@@ -44,30 +44,48 @@ jobs:
       #    echo test, and deploy your project.
       - name: Download IPs zip file, unzip, merge, uniq
         run: |
-          cat > valid_ips.txt <<-EOF
-          138.2.18.184
-          129.150.34.195
-          130.162.61.18
-          138.3.253.140
-          141.148.219.182
-          144.24.85.158
-          146.56.162.25
-          152.67.222.250
-          152.70.155.147
-          164.152.34.166
-          EOF
+          curl -o ips.zip https://zip.baipiao.eu.org
+          unzip ips.zip -d ips
+          cat ips/*.txt | sort | uniq > ips.txt
+          wc -l ips.txt
+  
+      - name: Ping IPs and filter
+        run: |
+          UA="Mozilla/5.0 Chrome/107.0.0.0 Safari/537.36"
+          touch valid_ips.txt
+          while IFS= read -r ip; do
+            measure_url=`curl -H "content-type: application/json" -A "$UA" \
+              -d '{"type":"ping","target":"'$ip'","locations":[{"country":"HK","limit":2}]}' \
+              -i "https://api.globalping.io/v1/measurements"|grep location|awk '{print $2}'|tr -d '\n\r'`
+            sleep 2
+            while true; do
+              echo url=$measure_url
+              r=`curl -A "$UA" -s "$measure_url"`
+              case "$r" in
+                *in-progress*)  sleep 1; continue;;
+                *loss\":0*)     echo "$ip" >> valid_ips.txt; break;;
+                *)              break;;
+              esac
+            done
+          done < ips.txt
           wc -l valid_ips.txt
   
+      - name: Backup original data, append into valid_ips.txt
+        run: |
+          orig_data=`curl -H "${{env.CF_AUTH}}" "${{env.CF_KV_API}}/${{env.PROXYS}}"`
+          [[ "$orig_data" == *error* ]] && echo $orig_data && return 1
+          curl -X PUT -H "${{env.CF_AUTH}}" -d "$orig_data" "${{env.CF_KV_API}}/${{env.PROXYS_BAK}}"
+          echo $orig_data |tr -d '["]'|sed -r 's/,| /\n/g' >> valid_ips.txt
+          cat valid_ips.txt | sort | uniq > valid_ips.txt
+          wc -l valid_ips.txt
+
       - name: SSL/TLS Handshake Test
         run: |          
           touch valid_ips_with_ssl.txt
-          cat valid_ips.txt
           while IFS= read -r ip || [ $ip ]; do
-            echo "start test $ip"
-            ret=`echo|openssl s_client -connect $ip:443 -noservername -brief 2>&1|tr -s '\n\r' ' '`
-            echo "ret=$ret"
+            ret=`echo|openssl s_client -connect $ip:443 --noservername -brief 2>&1|tr -s '\n\r' ' '`
             case "$ret" in
-                *Verification:\ OK*) echo $ip; echo "$ip" >> valid_ips_with_ssl.txt ;;
+                *Verification:\ OK*) echo "$ip" >> valid_ips_with_ssl.txt ;;
                 *458*)               echo "$ip" >> valid_ips_with_ssl.txt ;; # unrecognized name
                 *410*)               echo 410 ;; # alert handshake failure
                 *connect\ error*)    echo connect error ;;
@@ -75,14 +93,17 @@ jobs:
                 #*write:errno=*)     echo retry ;;
                 *)                   echo "$ip $ret" ;;
             esac
-            echo "end test $ip"
           done < valid_ips.txt
           wc -l valid_ips_with_ssl.txt
 
       - name: Upload IPs file
         uses: actions/upload-artifact@v4
         with:
-          name: test
+          name: cf-proxys
           path: valid_ips_with_ssl.txt
           
-  
+      - name: Update valid IPs to server
+        run: |
+          data=`echo $(cat valid_ips_with_ssl.txt)`
+          curl -X PUT -H "${{env.CF_AUTH}}" -d "$data" "${{env.CF_KV_API}}/${{env.PROXYS}}"
+          curl -X PUT -H "${{env.CF_AUTH}}" -d "`date +%s%3N`" "${{env.CF_KV_API}}/${{env.PROXYS_UPDATED}}"
