--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -7,7 +7,7 @@ on:
   schedule:
     - cron: "25 8 * * *"
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  #push:
+  push:
   #  branches: [ "main" ]
   #pull_request:
   #  branches: [ "main" ]
