--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -119,12 +119,12 @@ jobs:
   
       - name: Backup original data, append into valid_ips.txt
         run: |
-          ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "${{CF_KV_API}}/${{PROXYS}}"`
+          ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$PROXYS"`
           if [[ "$orig_data" == *error* ]]; then
             echo $ret
           else
             curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
-              -d "$ret" "${{env.CF_KV_API}}/${{PROXYS_BAK}}"
+              -d "$ret" "$CF_KV_API/$PROXYS_BAK"
             echo $ret |tr -d '["]'|sed -r 's/,| /\n/g' >> valid_ips.txt
             cat valid_ips.txt | sort | uniq > valid_ips.txt
             wc -l valid_ips.txt
@@ -156,6 +156,6 @@ jobs:
         run: |
           data=`echo $(cat valid_ips_with_ssl.txt)`
           curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
-            -d "$data" "${{CF_KV_API}}/${{PROXYS}}"
+            -d "$data" "$CF_KV_API/$PROXYS"
           curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
-            -d "`date +%s%3N`" "${{CF_KV_API}}/${{PROXYS_UPDATED}}"
+            -d "`date +%s%3N`" "$CF_KV_API/$PROXYS_UPDATED"
