--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -116,7 +116,15 @@ jobs:
           8.219.77.222
           8.219.237.250
           EOF
-          cat valid_ips.txt
+          wc -l valid_ips.txt
+          head valid_ips.txt
+          tail valid_ips.txt
+
+      - name: Upload test IPs file
+        uses: actions/upload-artifact@v4
+        with:
+          name: valid_ips
+          path: valid_ips.txt
   
       - name: Backup original data, append into valid_ips.txt
         run: |
