--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -117,14 +117,6 @@ jobs:
           8.219.237.250
           EOF
           wc -l valid_ips.txt
-          head valid_ips.txt
-          tail valid_ips.txt
-
-      - name: Upload test IPs file
-        uses: actions/upload-artifact@v4
-        with:
-          name: valid_ips
-          path: valid_ips.txt
   
       - name: Backup original data, append into valid_ips.txt
         run: |
@@ -135,7 +127,7 @@ jobs:
             curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
               -d "$ret" "$CF_KV_API/$PROXYS_BAK"
             echo $ret |tr -d '["]'|sed -r 's/,| /\n/g' >> valid_ips.txt
-            cat valid_ips.txt | sort | uniq > valid_ips.txt
+            cat valid_ips.txt | sort | uniq >> valid_ips.txt
             wc -l valid_ips.txt
           fi
 
