--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -95,7 +95,7 @@ jobs:
           touch valid_ips_with_ssl.txt
           while IFS= read -r ip || [ $ip ]; do
             retry=false
-            while true;
+            while true; do
               ret=`echo|openssl s_client -connect $ip:443 --noservername -brief 2>&1|tr -s '\n\r' ' '`
               case "$ret" in
                 *410*|*write:errno=*)  
