--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -80,15 +80,12 @@ jobs:
       - name: Backup original data, append into valid_ips.txt
         run: |
           ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$PROXYS"`
-          if [[ "$orig_data" == *error* ]]; then
-            echo $ret
-          else
-            #curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" -d "$ret" "$CF_KV_API/$PROXYS_BAK"
-            echo "$ret" |tr -d '["]'|sed -r 's/,| /\n/g' >> valid_ips.txt
-            #cat valid_ips.txt | sort | uniq > tmp.txt
-            #mv tmp.txt valid_ips.txt
-            #wc -l valid_ips.txt
-          fi
+          [[ "$orig_data" == *error* ]] && echo $ret && exit
+          curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" -d "$ret" "$CF_KV_API/$PROXYS_BAK"
+          echo "$ret" |tr -d '["]'|sed -r 's/,| /\n/g' >> valid_ips.txt
+          cat valid_ips.txt | sort | uniq > tmp.txt
+          mv tmp.txt valid_ips.txt
+          wc -l valid_ips.txt
 
       - name: SSL/TLS Handshake Test
         run: |          
@@ -104,7 +101,8 @@ jobs:
                 *Verification:\ OK*) echo "$ip" >> valid_ips_with_ssl.txt ;;
                 *458*)               echo "$ip" >> valid_ips_with_ssl.txt ;; # unrecognized name                
                 *connect\ error*)    echo connect error ;;
-                #*verify\ error*)    echo error ;; # self signed certificate, expired
+                # (438)alert internal error, self signed certificate, expired, unable to get local issuer certificate
+                #*verify\ error*)    echo error ;; 
                 *)                   echo "$ip $ret" ;;
               esac
               break;
@@ -120,10 +118,9 @@ jobs:
           
       - name: Update valid IPs to server
         run: |
-          if [ -s valid_ips_with_ssl.txt ]; then
-            #data=`echo $(cat valid_ips_with_ssl.txt)`
-            #curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
-            #  -d "$data" "$CF_KV_API/$PROXYS"
-            #curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
-            #  -d "`date +%s%3N`" "$CF_KV_API/$PROXYS_UPDATED"
-          fi
+          [ ! -s valid_ips_with_ssl.txt ] && exit;
+          data=`echo $(cat valid_ips_with_ssl.txt)`
+          curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+            -d "$data" "$CF_KV_API/$PROXYS"
+          curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+            -d "`date +%s%3N`" "$CF_KV_API/$PROXYS_UPDATED"
