--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -5,9 +5,9 @@ name: IP Workflow
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: "0 19 * * *"
+    - cron: "0 13 * * *"
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
+  #push:
   #  branches: [ "main" ]
   #pull_request:
   #  branches: [ "main" ]
@@ -56,7 +56,7 @@ jobs:
             measure_url=`curl -H "content-type: application/json" -A "$UA" \
               -d '{"type":"ping","target":"'$ip'","locations":[{"country":"HK","limit":2}]}' \
               -i "https://api.globalping.io/v1/measurements"|grep location|awk '{print $2}'|tr -d '\n\r'`
-            sleep 2
+            sleep 1.5
             while true; do
               echo url=$measure_url
               r=`curl -A "$UA" -s "$measure_url"`
@@ -81,7 +81,7 @@ jobs:
 
       - name: SSL/TLS Handshake Test
         run: |          
-          touch valid_ips_with_ssl.txt
+          touch ips_with_ssl.txt
           while IFS= read -r ip || [ $ip ]; do
             retry=false
             while true; do
@@ -90,8 +90,8 @@ jobs:
                 *410*|*write:errno=*)  # 410: alert handshake failure
                   echo $ret ; 
                   ! $retry && retry=true && echo "retry $ip" && continue ;;
-                *Verification:\ OK*) echo "$ip" >> valid_ips_with_ssl.txt ;;
-                *458*)               echo "$ip" >> valid_ips_with_ssl.txt ;; # unrecognized name                
+                *Verification:\ OK*) echo "$ip" >> ips_with_ssl.txt ;;
+                *458*)               echo "$ip" >> ips_with_ssl.txt ;; # unrecognized name                
                 *connect\ error*)    echo connect error ;;
                 # (438)alert internal error, self signed certificate, expired, unable to get local issuer certificate
                 #*verify\ error*)    echo error ;; 
@@ -100,18 +100,18 @@ jobs:
               break;
             done
           done < valid_ips.txt
-          wc -l valid_ips_with_ssl.txt
+          wc -l ips_with_ssl.txt
 
       - name: Upload IPs file
         uses: actions/upload-artifact@v4
         with:
           name: cf-proxys
-          path: valid_ips_with_ssl.txt
+          path: ips_with_ssl.txt
           
       - name: Update valid IPs to server
         run: |
-          [ ! -s valid_ips_with_ssl.txt ] && exit;
-          data=`echo $(cat valid_ips_with_ssl.txt)`
+          [ ! -s ips_with_ssl.txt ] && exit;
+          data=[$(echo `sed -r 's/^(.*)$/"\1"/' ips_with_ssl.txt`|tr -s ' ' ',')]
           curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
             -d "$data" "$CF_KV_API/$PROXYS"
           curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
