--- a/.github/workflows/update_cfhost.yml
+++ b/.github/workflows/update_cfhost.yml
@@ -52,8 +52,8 @@ jobs:
             echo $ret
           elif [ ! -z "$ret" ]; then
             #echo `cat cfhost.json`$ret|sed 's/\]\[/,/' > tmp.json
-            cat cfhost.json|tr -d '[]'|sed -r 's/,| /\n/g' > tmp.txt
-            echo $ret|tr -d '[]'|sed -r 's/,| /\n/g'      >> tmp.txt
+            cat cfhost.json|tr -d '[]'|sed -r 's/, /\n/g' > tmp.txt
+            echo $ret|tr -d '[]'|sed -r 's/, /\n/g'      >> tmp.txt
             echo [$(echo `cat tmp.txt|sort -u`|tr -s ' ' ',')] > cfhost.json
             echo 'update_cfhost=true' >> $GITHUB_ENV
           fi
@@ -79,7 +79,7 @@ jobs:
           
       - name: deploy worker script
         run: |
-          [ -s "dist/$ENTRY" ] || exit;
+          [ -s "dist/$ENTRY" ] || (echo "$ENTRY not found!" && exit);
           curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
             -H 'Content-Type: multipart/form-data' \
             --form "worker.js=@dist/$ENTRY;type=application/javascript+module" \
